fix align

--- a/assets/component-product-model.css
+++ b/assets/component-product-model.css
@@ -3,6 +3,7 @@
   color: rgb(var(--color-foreground));
   margin: 1rem auto;
   box-shadow: none;
+  display: flex;
 }
 
 .button.product__xr-button:hover {
